tests/good/lexical/023-commentaire-imbriquer-2.clap

(* x -> 42 *) val x : int = 42
