tests/bad/typing/021-fun-bad-arrow-type-left.clap
** int -> int != string -> int
val f : (int -> int) = fun (x : string) => 42
